[tool.poetry]
name = "cipher"
version = "0.1.0"
description = "Crypto tool for automation frameworks"
authors = ["Dmytro Berezovskyi <dmberezovskyi@gmail.com>"]
license = "MIT"
repository = "https://github.com/dmberezovskyii/cipher-test"
keywords = ["SDK", "TurboPi", "Python", "Hiwonder"]
readme = "README.md"