[tool.poetry]
name = "cipher"
version = "1.0.0"
description = "Crypto tool for automation frameworks"
authors = ["Dmytro Berezovskyi <dmberezovskyi@gmail.com>"]
license = "MIT"
repository = "https://github.com/dmberezovskyii/secure-test-automation"
keywords = ["SDK", "TurboPi", "Python", "Hiwonder"]
readme = "README.md"
packages = [
    { include = "core" },
    { include = "config" },
    { include = "cli" },
    { include = "storage" }
]
[tool.poetry.dependencies]
python = "^3.12.6"
# Pytest
pytest = "8.3.2"
pytest-html = "==4.1.1"

# lint
ruff = "==0.8.6"
# utils
cryptography = "==44.0.0"
pydantic = "^2.10.3"
beautifulsoup4 = "==4.11.1"
PyYAML = "==6.0.2"
toml = "==0.10.2"
pyfiglet = "==1.0.2"
boto3="^1.35.92"